[package]
name = "twitch-notif-daemon"
version = "0.1.0"
authors = ["Grégoire Charvet 黑瓜 <greg@geekingfrog.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.36"
reqwest = {version = "0.10.10", features = ["blocking", "json"]}
serde = {version = "1.0.118", features = ["derive"]}
serde_json = "1.0.60"
chrono = {version = "0.4", features = ["serde"]}
directories = "3.0.1"
log = "0.4.11"
env_logger = {version="0.8.2", default-features=false, features=["termcolor", "humantime", "atty"]}
notify-rust = "4.0.0"
structopt = "0.3.21"
